@@ -152,6 +152,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   inline, as in most browsers
 * Pass the user as an argument to 'isValidPassword' hook callbacks; see
   docs/hooks.txt for more information
+* (bug 6808) Allow import to different page name
+* (bug 6436) Localization of Special:Import XML parser Error message(s).
 
 == Bugfixes since 1.10 ==
 
